--- a/IdeaProjects/umc/src/main/resources/application.yml
+++ b/IdeaProjects/umc/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver # MySQL JDBC ???? ??? ??
-    url: ${DB_URL} # jdbc:mysql://localhost:3306/{???????}
+    url: jdbc:mysql://localhost:3306/umc?serverTimezone=Asia/Seoul&characterEncoding=UTF-8 # jdbc:mysql://localhost:3306/{???????}
     username: ${DB_USER} # MySQL ?? ??
     password: ${DB_PW} # MySQL ????
 
