Fix: 데이터베이스 오류 수정

--- a/HaMming/umc9th/src/main/resources/application.yml
+++ b/HaMming/umc9th/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: umc9th
+    url: jdbc:mysql://localhost:3306/umc9th
     username: root
     password: alsrudH0924!
 
@@ -13,7 +13,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
